...
        }
    }

    var accessibilityIdentifier: String {
        switch self {
        case .home:
            return "mainTab.home"
        case .messages:
            return "mainTab.messages"
        case .search:
            return "mainTab.search"
        case .notifications:
            return "mainTab.notifications"
        case .profile:
            return "mainTab.profile"
...
